gui: Fix Updater spinner's vertical alignment
  The method used to vertically center the spinner displayed in the
  Updater window when no download progress information is available is
  a Firefox experimental feature which has no effects in Chromium, the
  browser used to render Desktop's views.

  Besides, this hack was only necessary because the `spin` animation was
  redefined in our own CSS because, in turn, we were adding an
  unnecessary top margin on the main window's status bar spinner icon.

  One fix leading to the other, we now have centered spinners in both
  the status bar and the upater window.
  We took the opportunity to use the same size for the status bar
  spinner as the other status bar icons and to align these with the file
  icons displayed below in the Recent tab.

--- a/gui/styles/_statusbar.styl
+++ b/gui/styles/_statusbar.styl
@@ -18,23 +18,22 @@
     white-space: nowrap;
 
   .status_img
-    flex 0 0 3em
+    flex 0 0 4em
 
     img.status__icon
       @extend $icon-24
 
       display: block
-      margin-left: 25%
+      margin-left 1em
       padding: 0.2em
       vertical-align: middle
       border-radius: 1.5em
 
     .spin
-      @extend $icon-16
+      @extend $icon-24
       @extend $spin
       background-color: var(--primaryColor)
-      margin-left: 1em
-      margin-top: 1em
+      margin-left 1em
 
   &.blue
     .status__icon--uptodate
